--- a/AgentServicesStore/pom.xml
+++ b/AgentServicesStore/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>com.biosimilarity.lift</groupId>
             <artifactId>specialK</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-p2px-SNAPSHOT</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>com.biosimilarity.lift</groupId>-->
