--- a/AgentServicesStore/pom.xml
+++ b/AgentServicesStore/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.protegra</groupId>
     <artifactId>AgentServicesStore</artifactId>
-    <version>1.1.0.1</version>
+    <version>1.1.1.1</version>
     <name>${project.artifactId}</name>
     <description>Agent class library</description>
     <inceptionYear>2010</inceptionYear>
@@ -70,20 +70,37 @@
 
 	<!-- for Prolog capabilities -->
         <dependency>
-            <groupId>alice.tuprolog</groupId>
-            <artifactId>2p</artifactId>
-            <version>local</version>
-        </dependency>
-        <dependency>
-            <groupId>org.prolog4j</groupId>
-            <artifactId>prolog4j-api-0.2.0</artifactId>
-            <version>local</version>
-        </dependency>
-        <dependency>
-            <groupId>org.prolog4j</groupId>
-            <artifactId>prolog4j-tuprolog-0.2.0</artifactId>
-            <version>local</version>
-        </dependency>
+             <groupId>it.unibo.alice.tuprolog</groupId>
+             <artifactId>tuprolog</artifactId>
+             <version>2.1.1</version>
+           </dependency>
+
+           <dependency>
+             <groupId>org.prolog4j</groupId>
+             <artifactId>prolog4j-api</artifactId>
+             <version>0.2.1-SNAPSHOT</version>
+           </dependency>
+
+           <dependency>
+             <groupId>org.prolog4j</groupId>
+             <artifactId>prolog4j-tuprolog</artifactId>
+             <version>0.2.1-SNAPSHOT</version>
+           </dependency>
+        <!--<dependency>-->
+            <!--<groupId>alice.tuprolog</groupId>-->
+            <!--<artifactId>2p</artifactId>-->
+            <!--<version>local</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.prolog4j</groupId>-->
+            <!--<artifactId>prolog4j-api-0.2.0</artifactId>-->
+            <!--<version>local</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.prolog4j</groupId>-->
+            <!--<artifactId>prolog4j-tuprolog-0.2.0</artifactId>-->
+            <!--<version>local</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>net.lag</groupId>
