--- a/AgentServices-Core/pom.xml
+++ b/AgentServices-Core/pom.xml
@@ -13,6 +13,7 @@
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
         <scala.version>2.9.0-1</scala.version>
+	<agentservices-store.version>1.1.0.2</agentservices-store.version>
          <!-- Common plugin settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
@@ -65,7 +66,7 @@
         <dependency>
             <groupId>com.protegra</groupId>
             <artifactId>AgentServicesStore</artifactId>
-            <version>1.1.0.2</version>
+            <version>${agentservices-store.version}</version>
         </dependency>
         <dependency>
             <groupId>net.lag</groupId>
