--- a/AgentServices-Core/pom.xml
+++ b/AgentServices-Core/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.protegra-ati</groupId>
     <artifactId>agentservices-core</artifactId>
-    <version>1.0.0.8</version>
+    <version>1.0.0.9</version>
     <name>${project.artifactId}</name>
     <description>Agent class library</description>
     <inceptionYear>2010</inceptionYear>
@@ -73,7 +73,11 @@
             <artifactId>configgy</artifactId>
             <version>local</version>
         </dependency>
-
+        <dependency>
+        	<groupId>biz.source_code</groupId>
+        	<artifactId>base64coder</artifactId>
+        	<version>2010-09-21</version>
+        </dependency>
         <dependency>
           <groupId>log4j</groupId>
           <artifactId>log4j</artifactId>
