--- a/AgentServicesStore/pom.xml
+++ b/AgentServicesStore/pom.xml
@@ -13,7 +13,8 @@
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
         <scala.version>2.9.0-1</scala.version>
-        <specialk.version>1.1.0.2</specialk.version>
+        <specialk.version>1.1</specialk.version>
+        <!--<specialk.version>1.1.0.2</specialk.version>-->
          <!-- Common plugin settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
