--- a/AgentServices-Core/pom.xml
+++ b/AgentServices-Core/pom.xml
@@ -37,6 +37,15 @@
             <id>biosim</id>
             <url>http://biosimrepomirror.googlecode.com/svn/trunk</url>
         </repository>
+        <repository>
+            <id>spy</id>
+            <name>Spy Repository</name>
+            <layout>default</layout>
+            <url>http://files.couchbase.com/maven2/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <pluginRepositories>
@@ -115,6 +124,12 @@
 			<artifactId>mail</artifactId>
 			<version>1.4.5</version>
 		</dependency>
+        <dependency>
+            <groupId>spy</groupId>
+            <artifactId>spymemcached</artifactId>
+            <version>2.8.4</version>
+            <scope>provided</scope>
+        </dependency>
 
     <!-- Test -->
         <dependency>
