--- a/AgentServicesStore/pom.xml
+++ b/AgentServicesStore/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.protegra</groupId>
     <artifactId>AgentServicesStore</artifactId>
-    <version>1.1.1.7</version>
+    <version>1.1.1.8</version>
     <name>${project.artifactId}</name>
     <description>Agent class library</description>
     <inceptionYear>2010</inceptionYear>
@@ -33,10 +33,19 @@
             <id>biosim</id>
             <url>http://biosimrepomirror.googlecode.com/svn/trunk</url>
         </repository>
-	<repository>
+        <repository>
+            <id>spy</id>
+            <name>Spy Repository</name>
+            <layout>default</layout>
+            <url>http://files.couchbase.com/maven2/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
             <id>protegraRepo</id>
             <url>ftp://ftp.protegra.com</url>
-        </repository>        
+        </repository>
     </repositories>
 
     <pluginRepositories>
@@ -125,7 +134,11 @@
             <artifactId>jline</artifactId>
             <version>2.9.0-1</version>
         </dependency>
-
+        <dependency>
+            <groupId>spy</groupId>
+            <artifactId>spymemcached</artifactId>
+            <version>2.8.4</version>
+        </dependency>
     <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
