--- a/AgentServicesStore/pom.xml
+++ b/AgentServicesStore/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.protegra</groupId>
     <artifactId>AgentServicesStore</artifactId>
-    <version>1.1.1.10-MERGE</version>
+    <version>1.1.1.11-MERGE</version>
     <name>${project.artifactId}</name>
     <description>Agent class library</description>
     <inceptionYear>2010</inceptionYear>
@@ -13,6 +13,9 @@
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
         <scala.version>2.9.0-1</scala.version>
+        <scala.test.specs2.version>1.8.2</scala.test.specs2.version>
+        <!--<scala.version>2.9.2</scala.version>-->
+        <!--<scala.test.specs2.version>1.12.1</scala.test.specs2.version>-->
         <specialk.version>1.1.0.5</specialk.version>
          <!-- Common plugin settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -154,6 +157,13 @@
              <version>1.6.8</version>
              <scope>test</scope>
          </dependency>
+        <dependency>
+          <groupId>org.specs2</groupId>
+          <artifactId>specs2_${scala.version}</artifactId>
+          <version>${scala.test.specs2.version}</version>
+          <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
     <build>
