--- a/AgentServices-Core/pom.xml
+++ b/AgentServices-Core/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.protegra-ati</groupId>
     <artifactId>agentservices-core</artifactId>
-    <version>1.0.0.13</version>
+    <version>1.0.0.13-MERGE</version>
     <name>${project.artifactId}</name>
     <description>Agent class library</description>
     <inceptionYear>2010</inceptionYear>
@@ -13,7 +13,8 @@
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
         <scala.version>2.9.0-1</scala.version>
-	    <agentservices-store.version>1.1.1.10</agentservices-store.version>
+        <scala.test.specs2.version>1.8.2</scala.test.specs2.version>
+	    <agentservices-store.version>1.1.1.11-MERGE</agentservices-store.version>
          <!-- Common plugin settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
@@ -137,15 +138,12 @@
             <version>4.8.1</version>
             <scope>test</scope>
         </dependency>
-         <dependency>
-             <groupId>org.scala-tools.testing</groupId>
-             <!-- <artifactId>specs_2.8.1</artifactId> -->
-             <artifactId>specs_2.9.0-1</artifactId>
-             <!-- <version>1.6.7.2</version> -->
-             <version>1.6.8</version>
-             <scope>test</scope>
-         </dependency>
-
+        <dependency>
+          <groupId>org.specs2</groupId>
+          <artifactId>specs2_${scala.version}</artifactId>
+          <version>${scala.test.specs2.version}</version>
+          <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <sourceDirectory>src/main/scala</sourceDirectory>
