all tests use a config now

--- a/AgentServices-Core/init_store.conf
+++ b/AgentServices-Core/init_store.conf
@@ -48,6 +48,13 @@ private {
       port = 5672
     }
   }
+
+  rabbit {
+    s1 {
+      URI = "127.0.0.1"
+      port = 5672
+    }
+  }
 }
 
 id = "f1a48b74-6a4a-455a-858d-a6b7798cb71c"
