--- a/AgentServices-Core/init_store.conf
+++ b/AgentServices-Core/init_store.conf
@@ -62,3 +62,4 @@ acquaintanceId = "9707A0D9-DA93-493e-9906-1E1CF73200F4"
 
 appBizNetworkId = "f5bc533a-d417-4d71-ad94-8c766907381b"
 networkMode = "Local"
+privateNetworkMode = "Rabbit"
