--- a/AgentServices-Core/pom.xml
+++ b/AgentServices-Core/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.protegra-ati</groupId>
     <artifactId>agentservices-core</artifactId>
-    <version>1.0.1.23</version>
+    <version>1.0.1.24</version>
     <name>${project.artifactId}</name>
     <description>Agent class library</description>
     <inceptionYear>2010</inceptionYear>
@@ -14,7 +14,7 @@
         <encoding>UTF-8</encoding>
         <scala.version>2.9.0-1</scala.version>
         <scala.test.specs2.version>1.8.2</scala.test.specs2.version>
-	    <agentservices-store.version>1.0.1.8</agentservices-store.version>
+	    <agentservices-store.version>1.0.1.9</agentservices-store.version>
          <!-- Common plugin settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
@@ -74,8 +74,8 @@
             <version>${scala.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.protegra</groupId>
-            <artifactId>AgentServicesStore</artifactId>
+            <groupId>com.protegra-ati</groupId>
+            <artifactId>agentservices-store</artifactId>
             <version>${agentservices-store.version}</version>
         </dependency>
         <dependency>
