--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -11,10 +11,9 @@
         <maven.compiler.source>1.5</maven.compiler.source>
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
-        <specialk.version>1.1.2.0</specialk.version>
+        <specialk.version>1.1.2.1</specialk.version>
         <scala.version>2.9.2</scala.version>
         <scala.test.specs2.version>1.12.3</scala.test.specs2.version>
-        <specialk.version>1.1.2.0</specialk.version>
          <!-- Common plugin settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
@@ -133,7 +132,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>jline</artifactId>
-            <version>2.9.0-1</version>
+            <version>${scala.version}</version>
         </dependency>
         <dependency>
             <groupId>spy</groupId>
@@ -147,14 +146,12 @@
             <version>4.8.1</version>
             <scope>test</scope>
         </dependency>
-         <dependency>
-             <groupId>org.scala-tools.testing</groupId>
-             <!-- <artifactId>specs_2.8.1</artifactId> -->
-             <artifactId>specs_2.9.0-1</artifactId>
-             <!-- <version>1.6.7.2</version> -->
-             <version>1.6.8</version>
-             <scope>test</scope>
-         </dependency>
+         <!-- <dependency> -->
+<!--              <groupId>org.scala-tools.testing</groupId> -->
+<!--              <artifactId>specs_2.9.0-1</artifactId> -->
+<!--              <version>1.6.8</version> -->
+<!--              <scope>test</scope> -->
+<!--          </dependency> -->
         <dependency>
           <groupId>org.specs2</groupId>
           <artifactId>specs2_${scala.version}</artifactId>
