--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -11,7 +11,7 @@
         <maven.compiler.source>1.5</maven.compiler.source>
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
-        <specialk.version>1.1.2.3</specialk.version>
+        <specialk.version>1.1.2.5-MONGO</specialk.version>
         <scala.version>2.9.2</scala.version>
         <scala.test.specs2.version>1.12.3</scala.test.specs2.version>
          <!-- Common plugin settings -->
