Switched versions to SNAPSHOT to avoid having to bump version of store/core/svc every time a change is made.

--- a/AgentServices-Core/pom.xml
+++ b/AgentServices-Core/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.protegra-ati</groupId>
     <artifactId>agentservices-core</artifactId>
-    <version>1.1.0.3</version>
+    <version>1.1.0.3-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>Agent class library</description>
     <inceptionYear>2010</inceptionYear>
@@ -12,7 +12,7 @@
         <maven.compiler.source>1.5</maven.compiler.source>
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
-	    <agentservices-store.version>1.1.0.2</agentservices-store.version>
+	    <agentservices-store.version>1.1.0.3-SNAPSHOT</agentservices-store.version>
         <scala.version>2.9.2</scala.version>
         <casbah.version>2.5.0</casbah.version>
         <scala.test.specs2.version>1.12.3</scala.test.specs2.version>
@@ -25,10 +25,21 @@
         <vscaladoc.links.liftweb.baseurl>http://scala-tools.org/mvnsites/liftweb</vscaladoc.links.liftweb.baseurl>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>protegraRepo</id>
+            <url>ftp://ftp.protegra.com</url>
+        </repository>
+    </distributionManagement>
+
     <repositories>
         <repository>
             <id>protegraRepo</id>
             <url>ftp://ftp.protegra.com</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
         </repository>
         <repository>
             <id>scala-tools.org</id>
@@ -169,7 +180,7 @@
             <extension>
                 <groupId>org.apache.maven.wagon</groupId>
                 <artifactId>wagon-ftp</artifactId>
-                <version>1.0-beta-7</version>
+                <version>2.4</version>
             </extension>
         </extensions>
         <plugins>
