--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.protegra-ati</groupId>
     <artifactId>agentservices-store</artifactId>
-    <version>1.1.0.2</version>
+    <version>1.1.0.3-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>Agent class library</description>
     <inceptionYear>2010</inceptionYear>
@@ -23,7 +23,22 @@
         <vscaladoc.links.liftweb.baseurl>http://scala-tools.org/mvnsites/liftweb</vscaladoc.links.liftweb.baseurl>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>protegraRepo</id>
+            <url>ftp://ftp.protegra.com</url>
+        </repository>
+    </distributionManagement>
+
     <repositories>
+        <repository>
+            <id>protegraRepo</id>
+            <url>ftp://ftp.protegra.com</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
         <repository>
             <id>scala-tools.org</id>
             <name>Scala-Tools Maven2 Repository</name>
@@ -41,10 +56,6 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-        </repository>
-        <repository>
-            <id>protegraRepo</id>
-            <url>ftp://ftp.protegra.com</url>
         </repository>
     </repositories>
 
@@ -168,7 +179,7 @@
             <extension>
                 <groupId>org.apache.maven.wagon</groupId>
                 <artifactId>wagon-ftp</artifactId>
-                <version>1.0-beta-7</version>
+                <version>2.4</version>
             </extension>
         </extensions>
         <plugins>
