--- a/IAServices/pom.xml
+++ b/IAServices/pom.xml
@@ -15,7 +15,7 @@
         <scala.version>2.9.2</scala.version>
         <casbah.version>2.5.0</casbah.version>
         <scala.test.specs2.version>1.12.3</scala.test.specs2.version>
-        <agentservices-core.version>1.3.0.0</agentservices-core.version>
+        <agentservices-core.version>1.1.0.8-IA</agentservices-core.version>
 
          <!-- Common plugin settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
