--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -11,9 +11,10 @@
         <maven.compiler.source>1.5</maven.compiler.source>
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
-        <specialk.version>1.1.3.6-IA</specialk.version>
-        <scala.version>2.9.2</scala.version>
-        <scala.test.specs2.version>1.12.3</scala.test.specs2.version>
+        <specialk.version>1.1.4.1</specialk.version>
+	<!-- scala.version>2.9.2</scala.version -->
+	<scala.version>2.10.0</scala.version>
+        <scala.test.specs2.version>1.14</scala.test.specs2.version>
          <!-- Common plugin settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
@@ -68,66 +69,59 @@
     </pluginRepositories>
 
     <dependencies>
+      <!-- scala -->
+	<dependency>
+	  <groupId>org.scala-lang</groupId>
+	  <artifactId>scala-library</artifactId>
+	  <version>${scala.version}</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.scala-lang</groupId>
+	  <artifactId>scala-actors</artifactId>
+	  <version>${scala.version}</version>
+	</dependency>            
+	<dependency>
+	  <groupId>org.scala-lang</groupId>
+	  <artifactId>scala-compiler</artifactId>
+	  <version>${scala.version}</version>
+	  <scope>test</scope>
+	</dependency>
+	<dependency>
+	  <groupId>org.scala-lang</groupId>
+	  <artifactId>jline</artifactId>
+	  <version>${scala.version}</version>
+	</dependency>
+        
         <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>${scala.version}</version>
-        </dependency>
-<!--        <dependency>
-            <groupId>JavaLibraries</groupId>
-            <artifactId>JavaLibraries</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>-->
-        <dependency>
-            <groupId>com.biosimilarity.lift</groupId>
-            <artifactId>specialK</artifactId>
-            <version>${specialk.version}</version>
-    </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.biosimilarity.lift</groupId>-->
-            <!--<artifactId>PlatformAgent</artifactId>-->
-            <!--<version>1.1.0.14</version>-->
-        <!--</dependency>-->
+	  <groupId>com.biosimilarity.lift</groupId>
+	  <artifactId>specialK</artifactId>
+	  <version>${specialk.version}</version>
+	</dependency>
 
     <!-- for Prolog capabilities -->
         <dependency>
-             <groupId>it.unibo.alice.tuprolog</groupId>
-             <artifactId>tuprolog</artifactId>
-             <version>2.1.1</version>
-           </dependency>
+	  <groupId>it.unibo.alice.tuprolog</groupId>
+	  <artifactId>tuprolog</artifactId>
+	  <version>2.1.1</version>
+	</dependency>
 
-           <dependency>
-             <groupId>org.prolog4j</groupId>
-             <artifactId>prolog4j-api</artifactId>
-             <version>0.2.1-SNAPSHOT</version>
-           </dependency>
+	<dependency>
+	  <groupId>org.prolog4j</groupId>
+	  <artifactId>prolog4j-api</artifactId>
+	  <version>0.2.1-SNAPSHOT</version>
+	</dependency>
 
-           <dependency>
-             <groupId>org.prolog4j</groupId>
-             <artifactId>prolog4j-tuprolog</artifactId>
-             <version>0.2.1-SNAPSHOT</version>
-           </dependency>
-        <!--<dependency>-->
-            <!--<groupId>alice.tuprolog</groupId>-->
-            <!--<artifactId>2p</artifactId>-->
-            <!--<version>local</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.prolog4j</groupId>-->
-            <!--<artifactId>prolog4j-api-0.2.0</artifactId>-->
-            <!--<version>local</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.prolog4j</groupId>-->
-            <!--<artifactId>prolog4j-tuprolog-0.2.0</artifactId>-->
-            <!--<version>local</version>-->
-        <!--</dependency>-->
+	<dependency>
+	  <groupId>org.prolog4j</groupId>
+	  <artifactId>prolog4j-tuprolog</artifactId>
+	  <version>0.2.1-SNAPSHOT</version>
+	</dependency>
 
         <dependency>
-            <groupId>net.lag</groupId>
-            <artifactId>configgy</artifactId>
-            <version>local</version>
-        </dependency>
+	  <groupId>net.lag</groupId>
+	  <artifactId>configgy</artifactId>
+	  <version>local</version>
+	</dependency>
 
         <dependency>
           <groupId>log4j</groupId>
@@ -140,36 +134,81 @@
             <artifactId>ws-commons-util</artifactId>
             <version>1.0.2</version>
         </dependency>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>jline</artifactId>
-            <version>${scala.version}</version>
-        </dependency>
-        <dependency>
+	
+	<dependency>
             <groupId>spy</groupId>
             <artifactId>spymemcached</artifactId>
             <version>2.8.4</version>
         </dependency>
-    <!-- Test -->
+
+	<!-- BNFC dependencies -->
+	<dependency>
+	  <groupId>jlex</groupId>
+	  <artifactId>JLex-local</artifactId>
+	  <version>local</version>
+	</dependency>
+	<dependency>
+	  <groupId>cup</groupId>
+	  <artifactId>java-cup-11a</artifactId>
+	  <version>local</version>
+	</dependency>
+	<dependency>
+	  <groupId>cup</groupId>
+	  <artifactId>java-cup-11a-runtime</artifactId>
+	  <version>local</version>
+	</dependency>        
+
+	<!-- rabbitmq -->
+	<dependency>
+	  <groupId>com.rabbitmq</groupId>
+	  <artifactId>amqp-client</artifactId>
+	  <!-- version>2.5.1</version -->
+	  <version>2.6.1</version>
+	</dependency>
+
+	<!-- jettison -->
+	<dependency>
+	  <groupId>org.codehaus.jettison</groupId>
+	  <artifactId>jettison</artifactId>
+	  <version>1.1</version>
+	</dependency>
+
+	<dependency>
+	  <groupId>org.scalaxb</groupId>
+	  <artifactId>scalaxb</artifactId>
+	  <version>local-update</version>
+	</dependency>
+
+	<dependency>
+	  <groupId>org.scalesxml</groupId>
+	  <artifactId>scales-xml_2.10</artifactId>
+	  <version>0.4.5</version>
+	</dependency>            
+    
+	<dependency>
+	  <groupId>org.scalesxml</groupId>
+	  <artifactId>scales-jaxen_2.10</artifactId>
+	  <version>0.4.5</version>
+	</dependency>                        
+ 
+	<!-- Test -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.1</version>
             <scope>test</scope>
         </dependency>
-         <!-- <dependency> -->
-<!--              <groupId>org.scala-tools.testing</groupId> -->
-<!--              <artifactId>specs_2.9.0-1</artifactId> -->
-<!--              <version>1.6.8</version> -->
-<!--              <scope>test</scope> -->
-<!--          </dependency> -->
         <dependency>
           <groupId>org.specs2</groupId>
-          <artifactId>specs2_${scala.version}</artifactId>
+          <artifactId>specs2_2.10</artifactId>
           <version>${scala.test.specs2.version}</version>
           <scope>test</scope>
         </dependency>
-
+	<dependency>
+	  <groupId>org.scalatest</groupId>
+	  <artifactId>scalatest_2.10</artifactId>
+	  <version>2.0.M5b</version>
+	</dependency>           
 
     </dependencies>
     <build>
