--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -69,6 +69,11 @@
     </pluginRepositories>
 
     <dependencies>
+      <dependency>
+	<groupId>com.typesafe</groupId>
+	<artifactId>config</artifactId>
+	<version>1.0.0</version>
+      </dependency>
       <!-- scala -->
 	<dependency>
 	  <groupId>org.scala-lang</groupId>
