Add scalastyle plugin to PlatformAgentLauncher.
Set plugin to execute on Compile for IAServices and PlatformAgentLauncher

--- a/IAServices/pom.xml
+++ b/IAServices/pom.xml
@@ -258,6 +258,7 @@
                         <goals>
                             <goal>check</goal>
                         </goals>
+                        <phase>compile</phase>
                     </execution>
                 </executions>
             </plugin>
