--- a/AgentServices-Core/init_store.conf
+++ b/AgentServices-Core/init_store.conf
@@ -1,67 +1,38 @@
-public {
-  self {
-    s1 {
-      URI = "127.0.0.1"
-      port = 6000
-    }
-  }
-
-  acquaintances {
-  }
+{
+	"agentservices.core": {
+		"id": "f1a48b74-6a4a-455a-858d-a6b7798cb71c",
+		"appBizNetworkId": "f5bc533a-d417-4d71-ad94-8c766907381b",
+		"networkMode": "Local",
+		"privateNetworkMode": "Rabbit",
+		"public": {
+			"self": {
+				"host": "127.0.0.1",
+				"port": 6000
+			},
+			"acquaintances": {
+			}
+		},
+		"private": {
+			"self": {
+				"host": "127.0.0.1",
+				"port": 4000
+			},
+			"acquaintances": {
+				"a1": {
+					"host": "127.0.0.1",
+					"port": 5672
+				}
+			},
+			"rabbit": {
+				"host": "127.0.0.1",
+				"port": 5672
+			}
+		},
+		"db": {
+			"self": {
+				"host": "127.0.0.1",
+				"port": 5000
+			}
+		}
+	}
 }
-
-db{
-  self {
-    s1 {
-      URI = "127.0.0.1"
-      port = 5000
-    }
-  }
-
-  acquaintances {
-  }
-}
-
-
-
-result{
-  self {
-    s1 {
-      URI = "127.0.0.1"
-      port = 7000
-    }
-  }
-
-  acquaintances {
-  }
-}
-
-private {
-  self {
-    s1 {
-      URI = "127.0.0.1"
-      port = 4000
-    }
-  }
-
-  acquaintances {
-    a1 {
-      URI = "127.0.0.1"
-      port = 5672
-    }
-  }
-
-  rabbit {
-    s1 {
-      URI = "127.0.0.1"
-      port = 5672
-    }
-  }
-}
-
-id = "f1a48b74-6a4a-455a-858d-a6b7798cb71c"
-acquaintanceId = "9707A0D9-DA93-493e-9906-1E1CF73200F4"
-
-appBizNetworkId = "f5bc533a-d417-4d71-ad94-8c766907381b"
-networkMode = "Local"
-privateNetworkMode = "Rabbit"
