--- a/AgentServices-Core/pom.xml
+++ b/AgentServices-Core/pom.xml
@@ -1,5 +1,5 @@
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.protegra-ati</groupId>
     <artifactId>agentservices-core</artifactId>
@@ -12,14 +12,15 @@
         <maven.compiler.source>1.5</maven.compiler.source>
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
-	    <agentservices-store.version>1.2.0.1-IA</agentservices-store.version>
-        <scala.version>2.9.2</scala.version>
-        <casbah.version>2.5.0</casbah.version>
-        <scala.test.specs2.version>1.12.3</scala.test.specs2.version>
-	     <!-- Common plugin settings -->
+        <agentservices-store.version>1.2.0.2-IA</agentservices-store.version>
+        <scala.version>2.10.0</scala.version>
+        <scala.versionsuffix>2.10</scala.versionsuffix>
+        <casbah.version>2.5.1</casbah.version>
+        <scala.test.specs2.version>1.14</scala.test.specs2.version>
+        <!-- Common plugin settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
-          <!-- vscaladoc settings -->
+        <!-- vscaladoc settings -->
         <maven.scaladoc.vscaladocVersion>1.2-SNAPSHOT</maven.scaladoc.vscaladocVersion>
         <vscaladoc.links.liftweb.pathsufix>scaladocs/</vscaladoc.links.liftweb.pathsufix>
         <vscaladoc.links.liftweb.baseurl>http://scala-tools.org/mvnsites/liftweb</vscaladoc.links.liftweb.baseurl>
@@ -71,14 +72,14 @@
 
     <dependencies>
         <dependency>
-        	<groupId>commons-pool</groupId>
-        	<artifactId>commons-pool</artifactId>
-        	<version>1.6</version>
+            <groupId>commons-pool</groupId>
+            <artifactId>commons-pool</artifactId>
+            <version>1.6</version>
         </dependency>
         <dependency>
-        	<groupId>com.esotericsoftware.kryo</groupId>
-        	<artifactId>kryo</artifactId>
-        	<version>2.20</version>
+            <groupId>com.esotericsoftware.kryo</groupId>
+            <artifactId>kryo</artifactId>
+            <version>2.20</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -91,19 +92,19 @@
             <version>${agentservices-store.version}</version>
         </dependency>
         <dependency>
-            <groupId>net.lag</groupId>
-            <artifactId>configgy</artifactId>
-            <version>local</version>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
-        	<groupId>biz.source_code</groupId>
-        	<artifactId>base64coder</artifactId>
-        	<version>2010-09-21</version>
+            <groupId>biz.source_code</groupId>
+            <artifactId>base64coder</artifactId>
+            <version>2010-09-21</version>
         </dependency>
         <dependency>
-          <groupId>log4j</groupId>
-          <artifactId>log4j</artifactId>
-          <version>1.2.16</version>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -117,14 +118,14 @@
             <version>1.0.2</version>
         </dependency>
         <dependency>
-        <groupId>org.apache.commons</groupId>
-          <artifactId>commons-lang3</artifactId>
-          <version>3.1</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>jline</artifactId>
-            <version>2.9.0-1</version>
+            <version>${scala.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.com.robust-it</groupId>
@@ -132,18 +133,18 @@
             <version>1.7.9</version>
         </dependency>
 
-		<dependency>
-			<groupId>javax.mail_oracle</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4.5</version>
-		</dependency>
+        <dependency>
+            <groupId>javax.mail_oracle</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.5</version>
+        </dependency>
         <dependency>
             <groupId>spy</groupId>
             <artifactId>spymemcached</artifactId>
             <version>2.8.4</version>
         </dependency>
 
-    <!-- Test -->
+        <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -151,23 +152,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-          <groupId>org.specs2</groupId>
-          <artifactId>specs2_${scala.version}</artifactId>
-          <version>${scala.test.specs2.version}</version>
-          <scope>test</scope>
+            <groupId>org.specs2</groupId>
+            <artifactId>specs2_${scala.versionsuffix}</artifactId>
+            <version>${scala.test.specs2.version}</version>
+            <scope>test</scope>
         </dependency>
-         <dependency>
-             <groupId>org.scala-tools.testing</groupId>
-             <!-- <artifactId>specs_2.8.1</artifactId> -->
-             <artifactId>specs_2.9.0-1</artifactId>
-             <!-- <version>1.6.7.2</version> -->
-             <version>1.6.8</version>
-             <scope>test</scope>
-         </dependency>
 
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>casbah_${scala.version}</artifactId>
+            <artifactId>casbah_${scala.versionsuffix}</artifactId>
             <version>${casbah.version}</version>
             <type>pom</type>
         </dependency>
@@ -185,23 +178,23 @@
         </extensions>
         <plugins>
             <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-resources-plugin</artifactId>
-              <version>2.3</version>
-          </plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.3</version>
+            </plugin>
             <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-source-plugin</artifactId>
-              <version>2.2</version>
-              <executions>
-                <execution>
-                  <id>attach-sources</id>
-                  <phase>verify</phase>
-                  <goals>
-                    <goal>jar-no-fork</goal>
-                  </goals>
-                </execution>
-              </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.scala-tools</groupId>
@@ -216,9 +209,9 @@
                         <jvmArg>-DpackageLinkDefs=file://${project.build.directory}/packageLinkDefs.properties</jvmArg>
                     </jvmArgs>
                     <args>
-		<!-- arg>manager.conf</arg -->
-		<!-- <arg>-deprecation</arg> -->
-		<!-- <arg>-unchecked</arg> -->
+                        <!-- arg>manager.conf</arg -->
+                        <!-- <arg>-deprecation</arg> -->
+                        <!-- <arg>-unchecked</arg> -->
                         <arg>-P:continuations:enable</arg>
                     </args>
                     <compilerPlugins>
@@ -226,7 +219,7 @@
                             <groupId>org.scala-lang.plugins</groupId>
                             <artifactId>continuations</artifactId>
                             <version>${scala.version}</version>
-<!--                            <version>2.10.0-SNAPSHOT</version>-->
+                            <!--                            <version>2.10.0-SNAPSHOT</version>-->
                         </compilerPlugin>
                     </compilerPlugins>
                 </configuration>
@@ -246,10 +239,10 @@
                         <phase>test-compile</phase>
                     </execution>
                     <execution>
-                       <phase>process-resources</phase>
-                       <goals>
-                         <goal>compile</goal>
-                       </goals>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
