--- a/IAServices/pom.xml
+++ b/IAServices/pom.xml
@@ -1,4 +1,3 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ati</groupId>
@@ -12,9 +11,10 @@
         <maven.compiler.source>1.5</maven.compiler.source>
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
-        <scala.version>2.9.2</scala.version>
-        <casbah.version>2.5.0</casbah.version>
-        <scala.test.specs2.version>1.12.3</scala.test.specs2.version>
+        <scala.version>2.10.0</scala.version>
+        <scala.versionsuffix>2.10</scala.versionsuffix>
+        <casbah.version>2.5.1</casbah.version>
+        <scala.test.specs2.version>1.14</scala.test.specs2.version>
         <agentservices-core.version>1.2.0.7-IA</agentservices-core.version>
 
          <!-- Common plugin settings -->
@@ -73,9 +73,9 @@
             <version>${agentservices-core.version}</version>
         </dependency>
         <dependency>
-            <groupId>net.lag</groupId>
-            <artifactId>configgy</artifactId>
-            <version>local</version>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
@@ -108,7 +108,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>jline</artifactId>
-            <version>2.9.0-1</version>
+            <version>${scala.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.com.robust-it</groupId>
@@ -126,19 +126,10 @@
         <!--removing specs1 causes issue with maven-surefire-plugin, fix this reference-->
         <dependency>
             <groupId>org.specs2</groupId>
-            <artifactId>specs2_${scala.version}</artifactId>
+            <artifactId>specs2_${scala.versionsuffix}</artifactId>
             <version>${scala.test.specs2.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.scala-tools.testing</groupId>
-            <!-- <artifactId>specs_2.8.1</artifactId> -->
-            <artifactId>specs_2.9.0-1</artifactId>
-            <!-- <version>1.6.7.2</version> -->
-            <version>1.6.8</version>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
     <build>
         <sourceDirectory>src/main/scala</sourceDirectory>
