Updated config files to use JSON.

--- a/AgentServices-Core/init_store.conf
+++ b/AgentServices-Core/init_store.conf
@@ -25,7 +25,9 @@
 			},
 			"rabbit": {
 				"host": "127.0.0.1",
-				"port": 5672
+				"port": 5672,
+				"userId": "kvdb",
+				"password": "anywhere"
 			}
 		},
 		"db": {
