--- a/IAServices/pom.xml
+++ b/IAServices/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ati</groupId>
     <artifactId>iaservices</artifactId>
@@ -17,10 +18,10 @@
         <scala.test.specs2.version>1.14</scala.test.specs2.version>
         <agentservices-core.version>1.2.0.8-IA</agentservices-core.version>
 
-         <!-- Common plugin settings -->
+        <!-- Common plugin settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
-          <!-- vscaladoc settings -->
+        <!-- vscaladoc settings -->
         <maven.scaladoc.vscaladocVersion>1.2-SNAPSHOT</maven.scaladoc.vscaladocVersion>
         <vscaladoc.links.liftweb.pathsufix>scaladocs/</vscaladoc.links.liftweb.pathsufix>
         <vscaladoc.links.liftweb.baseurl>http://scala-tools.org/mvnsites/liftweb</vscaladoc.links.liftweb.baseurl>
@@ -85,9 +86,9 @@
         </dependency>
 
         <dependency>
-          <groupId>log4j</groupId>
-          <artifactId>log4j</artifactId>
-          <version>1.2.16</version>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -101,9 +102,9 @@
             <version>1.0.2</version>
         </dependency>
         <dependency>
-        <groupId>org.apache.commons</groupId>
-          <artifactId>commons-lang3</artifactId>
-          <version>3.1</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -116,7 +117,7 @@
             <version>1.7.9</version>
         </dependency>
 
-    <!-- Test -->
+        <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -143,10 +144,10 @@
         </extensions>
         <plugins>
             <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-resources-plugin</artifactId>
-              <version>2.3</version>
-          </plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.3</version>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -174,9 +175,9 @@
                         <jvmArg>-DpackageLinkDefs=file://${project.build.directory}/packageLinkDefs.properties</jvmArg>
                     </jvmArgs>
                     <args>
-		<!-- arg>manager.conf</arg -->
-		<!-- <arg>-deprecation</arg> -->
-		<!-- <arg>-unchecked</arg> -->
+                        <!-- arg>manager.conf</arg -->
+                        <!-- <arg>-deprecation</arg> -->
+                        <!-- <arg>-unchecked</arg> -->
                         <arg>-P:continuations:enable</arg>
                     </args>
                     <compilerPlugins>
@@ -184,26 +185,27 @@
                             <groupId>org.scala-lang.plugins</groupId>
                             <artifactId>continuations</artifactId>
                             <version>${scala.version}</version>
-<!--                            <version>2.10.0-SNAPSHOT</version>-->
+                            <!-- <version>2.10.0-SNAPSHOT</version> -->
                         </compilerPlugin>
                     </compilerPlugins>
                     <launchers>
                         <launcher>
                             <id>mgr</id>
                             <mainClass>com.protegra.protunityservices.PlatformAgentAndUserAgentManager</mainClass>
-		  <!-- args are optional -->
+                            <!-- args are optional -->
                             <args>
-                                <arg>manager.conf</arg>
+                                <!-- <arg>manager.conf</arg> -->
                                 <arg>-deprecation</arg>
                                 <arg>-unchecked</arg>
+                                <arg>-feature</arg>
                                 <arg>-P:continuations:enable</arg>
                             </args>
-		  <!-- jvmArgs are optional -->
+                            <!-- jvmArgs are optional -->
                             <jvmArgs>
                                 <jvmArg>-Xmx1024m</jvmArg>
                             </jvmArgs>
                         </launcher>
-		<!-- you could define other launcher -->
+                        <!-- you could define other launcher -->
                     </launchers>
                 </configuration>
                 <executions>
@@ -222,10 +224,10 @@
                         <phase>test-compile</phase>
                     </execution>
                     <execution>
-                       <phase>process-resources</phase>
-                       <goals>
-                         <goal>compile</goal>
-                       </goals>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
