Updated pom files to use snapshots.

--- a/AgentServices-Core/pom.xml
+++ b/AgentServices-Core/pom.xml
@@ -2,8 +2,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.protegra-ati</groupId>
-    <artifactId>agentservices-core</artifactId>
-    <version>1.2.1.1-IA</version>
+    <artifactId>agentservices-core-ia</artifactId>
+    <version>1.2.1-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>Agent class library</description>
     <inceptionYear>2010</inceptionYear>
@@ -12,7 +12,7 @@
         <maven.compiler.source>1.5</maven.compiler.source>
         <maven.compiler.target>1.5</maven.compiler.target>
         <encoding>UTF-8</encoding>
-        <agentservices-store.version>1.2.1.1-IA</agentservices-store.version>
+        <agentservices-store.version>1.2.1-SNAPSHOT</agentservices-store.version>
         <scala.version>2.10.0</scala.version>
         <scala.versionsuffix>2.10</scala.versionsuffix>
         <casbah.version>2.5.1</casbah.version>
@@ -31,6 +31,11 @@
             <id>protegraRepo</id>
             <url>ftp://ftp.protegra.com</url>
         </repository>
+		<snapshotRepository>
+            <id>protegraRepo</id>
+            <url>ftp://ftp.protegra.com</url>
+            <uniqueVersion>true</uniqueVersion>
+        </snapshotRepository>
     </distributionManagement>
 
     <repositories>
@@ -88,7 +93,7 @@
         </dependency>
         <dependency>
             <groupId>com.protegra-ati</groupId>
-            <artifactId>agentservices-store</artifactId>
+            <artifactId>agentservices-store-ia</artifactId>
             <version>${agentservices-store.version}</version>
         </dependency>
         <dependency>
