Just to test github issue

--- a/AgentServices-Store/eval.conf
+++ b/AgentServices-Store/eval.conf
@@ -6,3 +6,4 @@ DSLCommLinkServerHost = "10.0.1.10"
 DSLCommLinkServerPort = 5672
 DSLCommLinkClientHost = "10.0.1.10"
 DSLCommLinkClientPort = 5672
+TestGitBranch = true
