Added parent project.

--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -8,6 +8,12 @@
     <description>Agent class library</description>
     <inceptionYear>2010</inceptionYear>
 
+    <parent>
+        <groupId>com.protegra-ati</groupId>
+        <artifactId>ia-parent</artifactId>
+        <version>1.0</version>
+    </parent>
+
     <properties>
         <maven.compiler.source>1.5</maven.compiler.source>
         <maven.compiler.target>1.5</maven.compiler.target>
