Added main class for running Diesel

--- a/AgentServices-Store/pom.xml
+++ b/AgentServices-Store/pom.xml
@@ -333,6 +333,12 @@
                             <!--                            <version>2.10.0-SNAPSHOT</version>-->
                         </compilerPlugin>
                     </compilerPlugins>
+                    <launchers>
+                        <launcher>
+                            <id>diesel</id>
+                            <mainClass>com.protegra_ati.agentservices.runner.Diesel</mainClass>
+                        </launcher>
+                    </launchers>
                 </configuration>
                 <executions>
                     <execution>
