Basic behavior factory initialization from configuration

--- a/AgentServices-Store/eval.client.conf
+++ b/AgentServices-Store/eval.client.conf
@@ -12,12 +12,20 @@ BFactoryCommLinkClientHost = "ec2-54-212-15-76.us-west-2.compute.amazonaws.com"
 BFactoryCommLinkClientPort = 5672
 BFactoryMap = {
   introductionInitiator = { 
-    cnxn = "put in some textual representation of a cnxn here"
+    cnxn = {
+      src = "introductionCnxn"
+      label = "initiation"
+      trgt = "introductionCnxn"
+    }
     label = "behaviors( introduction( initiator( true ), Alias ) )"
     class = "com.protegra_ati.agentservices.protocols.IntroductionInitiator"
     }
   introductionRecipient = { 
-    cnxn = "put in some textual representation of a cnxn here"
+    cnxn = {
+      src = "introductionCnxn"
+      label = "receipt"
+      trgt = "introductionCnxn"
+    }
     label = "behaviors( introduction( recipient( true ), Cnxn ) )"
     class = "com.protegra_ati.agentservices.protocols.IntroductionRecipient"
     }     
