Tracking down configuration details

--- a/AgentServices-Store/eval.client.conf
+++ b/AgentServices-Store/eval.client.conf
@@ -10,6 +10,9 @@ BFactoryCommLinkServerHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com
 BFactoryCommLinkServerPort = 5672
 BFactoryCommLinkClientHost = "ec2-54-212-15-76.us-west-2.compute.amazonaws.com"
 BFactoryCommLinkClientPort = 5672
+BFactoryEvaluatorHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com"
+BFactoryEvaluatorPort = 5672
+BFactoryEvaluatorHostData = "/bFactoryProtocol"
 BFactoryMap = {
   introductionInitiator = { 
     cnxn = {
