--- a/AgentServices-Store/eval.conf
+++ b/AgentServices-Store/eval.conf
@@ -12,3 +12,30 @@ DSLEvaluatorHostData = "/dieselProtocol"
 DSLEvaluatorPreferredSupplierHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com"
 DSLEvaluatorPreferredSupplierPort = 5672
 DSLEvaluatorNetwork = { }
+BFactoryCommLinkServerHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com"
+BFactoryCommLinkServerPort = 5672
+BFactoryCommLinkClientHost = "ec2-54-212-15-76.us-west-2.compute.amazonaws.com"
+BFactoryCommLinkClientPort = 5672
+BFactoryEvaluatorHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com"
+BFactoryEvaluatorPort = 5672
+BFactoryEvaluatorHostData = "/bFactoryProtocol"
+BFactoryMap = {
+  introductionInitiator = { 
+    cnxn = {
+      src = "introductionCnxn"
+      label = "initiation"
+      trgt = "introductionCnxn"
+    }
+    label = "behaviors( introduction( initiator( true ), Alias ) )"
+    class = "com.protegra_ati.agentservices.protocols.IntroductionInitiator"
+    }
+  introductionRecipient = { 
+    cnxn = {
+      src = "introductionCnxn"
+      label = "receipt"
+      trgt = "introductionCnxn"
+    }
+    label = "behaviors( introduction( recipient( true ), Cnxn ) )"
+    class = "com.protegra_ati.agentservices.protocols.IntroductionRecipient"
+    }     
+}
