--- a/AgentServices-Store/eval.server.conf
+++ b/AgentServices-Store/eval.server.conf
@@ -11,3 +11,26 @@ BFactoryCommLinkServerHost = "ec2-54-212-15-76.us-west-2.compute.amazonaws.com"
 BFactoryCommLinkServerPort = 5672
 BFactoryCommLinkClientHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com"
 BFactoryCommLinkClientPort = 5672
+BFactoryEvaluatorHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com"
+BFactoryEvaluatorPort = 5672
+BFactoryEvaluatorHostData = "/bFactoryProtocol"
+BFactoryMap = {
+  introductionInitiator = { 
+    cnxn = {
+      src = "introductionCnxn"
+      label = "initiation"
+      trgt = "introductionCnxn"
+    }
+    label = "behaviors( introduction( initiator( true ), Alias ) )"
+    class = "com.protegra_ati.agentservices.protocols.IntroductionInitiator"
+    }
+  introductionRecipient = { 
+    cnxn = {
+      src = "introductionCnxn"
+      label = "receipt"
+      trgt = "introductionCnxn"
+    }
+    label = "behaviors( introduction( recipient( true ), Cnxn ) )"
+    class = "com.protegra_ati.agentservices.protocols.IntroductionRecipient"
+    }     
+}
