Did merge from cryptoRedo to introProtocol

--- a/AgentServices-Store/log.conf
+++ b/AgentServices-Store/log.conf
@@ -1,2 +1,4 @@
-tweetLevel = "warning"
-blogLevel = "warning"
+#tweetLevel = "warning"
+#blogLevel = "warning"
+tweetLevel = "tweet"
+blogLevel = "tweet"
