--- a/AgentServices-Store/eval.test.server.conf
+++ b/AgentServices-Store/eval.test.server.conf
@@ -6,6 +6,12 @@ DSLCommLinkServerHost = "ec2-54-212-15-76.us-west-2.compute.amazonaws.com"
 DSLCommLinkServerPort = 5672
 DSLCommLinkClientHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com"
 DSLCommLinkClientPort = 5672
+DSLEvaluatorHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com"
+DSLEvaluatorPort = 5672
+DSLEvaluatorHostData = "/dieselProtocol"
+DSLEvaluatorPreferredSupplierHost = "ec2-54-245-188-153.us-west-2.compute.amazonaws.com"
+DSLEvaluatorPreferredSupplierPort = 5672
+DSLEvaluatorNetwork = { }
 TestGitBranch = true
 BFactoryCommLinkServerHost = "ec2-54-212-15-76.us-west-2.compute.amazonaws.com"
 BFactoryCommLinkServerPort = 5672
