Added printlns for tracing

--- a/AgentServices-Store/log.conf
+++ b/AgentServices-Store/log.conf
@@ -1,4 +1,4 @@
-#tweetLevel = "warning"
-#blogLevel = "warning"
-tweetLevel = "tweet"
-blogLevel = "tweet"
+tweetLevel = "warning"
+blogLevel = "warning"
+#tweetLevel = "tweet"
+#blogLevel = "tweet"
